--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if gt IE 9]><!-->	<html> <!--<![endif]-->
    <head>
       <meta charset="utf-8">
-      <title>Duumsday</title>
+      <title>Duumso-Fi</title>
       <meta name="description" content="Akyede hepls people register events and to send money online to support those events">
       <meta name="author" content="Alfred & Gideon">
       <!-- Mobile Metas -->
@@ -233,7 +233,7 @@
                            data-y="54"
                            data-speed="300"
                            data-start="800"
-                           data-easing="easeOutExpo">WE SNITCH FOR YOU</div>
+                           data-easing="easeOutExpo">STICK IT TO THE POWER</div>
 
                         <div class="caption list_slide lfb tp-caption start" 
                            data-easing="easeOutExpo" 
@@ -504,7 +504,7 @@
             <div class="footer-bottom">
                <div class="container">
                   <div class="row">
-                     <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6 "> &copy; Copyright 2013 by <a href="#">Duumsday</a>. All Rights Reserved. </div>
+                     <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6 "> &copy; Copyright 2013 by <a href="#">Duumso-Fi</a>. All Rights Reserved. </div>
                      <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6 ">
                         <ul class="social social-icons-footer-bottom">
                            <li class="facebook"><a href="#" data-toggle="tooltip" title="Facebook"><i class="icon-facebook"></i></a></li>
